[package]
name = "duo-enforcer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["macros"] }
chrono = "0.4.39"
crossbeam-channel = "0.5.14"
dirs = "5.0.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
jsonwebtoken = "9.3.0"
log = "0.4.22"
reqwest = { version = "0.12.11", features = ["json", "cookies"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tracing = { version = "0.1.41", features = ["log"] }
